--- a/bmi.html
+++ b/bmi.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>BMI Calculator</title>
+  <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
 </head>
   <body>
     <h1>BMI Calculator</h1>
