--- a/bmi.html
+++ b/bmi.html
@@ -6,6 +6,6 @@
 </head>
   <body>
     <h1>BMI Calculator</h1>
-    <script src="js/scripts.js">
+    <script src="js/scripts.js"</script>
 
     </script>
