Add initial changes to bmi page

--- a/bmi.html
+++ b/bmi.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BMI Calculator</title>
+  <title>BMI CALCULATOR</title>
   <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
 </head>
   <body>
-    <h1>BMI Calculator</h1>
+    <h1>STARNDARD BMI CALCULATOR</h1>
+    <img src="img/bmi1.jpeg" heigth=300px width=300px>
+    <img src="img/bmi.png" width=300px>
     <script src="js/scripts.js"></script>
   </body>
 </html>
